<resources>
    <string name="app_name">General Machinery Group</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">что-то</string>
    <string name="server_error">На данный момент \n сервер обновляется… \n пожалуйста подождите немного</string>
    <string name="text_big">Floxy 1.0 - женская модель начального уровня для прогулок. Хороша для нерегулярного использования на плоском рельефе в спокойном режиме езды. Относительно небольшой диаметр колеса делает этой велосипед универсальным для использования как взрослыми, так и подростками. </string>
    <string name="text_big2">Диаметр: 26\nПередний переключатель: Shimano TZ-500\nЗадний переключатель: MicroShift RD-M21\nТип тормозов: Ободные\nРама: Alloy 6061\nКоличество скоростей: 21</string>
    \nВилка: Hagen ES-245 Alloy/Steel 60mm
    <string name="text_big3">Серьезный подход к своему делу. Велосипед выкатили чистый, все работает. Причем цена  очень адекватная. В общем данным сервисом остался очень доволен.</string>
    <string name="no_connection">Нет соединения</string>
    <string name="check_connections_internet">Пожалуйста проверьте соединения с интернетом</string>
    <string name="not_selected_photo">Фотография не выбрано</string>
    <string name="maximum_10">Максимальная количество 10</string>
    <string name="add_description">Добавьте описание</string>
    <string name="category_catalog">Каталог категории</string>
    <string name="select_category">Выберите категорию</string>
    <string name="review">Отзывы</string>
    <string name="register_message_email">Без подтверждения телефонного номера , Вы не можете создавать продукты</string>
    <string name="message">Написать</string>
    <string name="successfully">УСПЕШНО!</string>
    <string name="yeah_product">Вы создали продукт!</string>
    <string name="exit">Выйти</string>
    <string name="close">Закрыть</string>
    <string name="wait">Подождите немного </string>
    <string name="create_ads">Создать объявление</string>
    <string name="selected_photo">Выберите фотографии</string>
    <string name="delete">Удалить</string>
    <string name="ads_number">ID:</string>
    <string name="update_date">Обновлено:</string>
    <string name="you_added">Вы добавили</string>
    <string name="fovarite_to">в избранные</string>

</resources>