<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".windows.createProduct.categorySelect.CategorySelectFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp">

        <ImageView
            android:id="@+id/text_header"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:visibility="gone"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/fon" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_toEndOf="@id/text_header"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toStartOf="@+id/cancel"
            app:layout_constraintStart_toEndOf="@+id/text_header"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/category_catalog"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtUpdateError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="12sp"
                    android:textColor="@color/fon" />

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/todo"
            android:padding="2dp"
            android:src="@drawable/ic_clear_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View style="@style/Divider.Horizontal" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:iconifiedByDefault="false"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/button_background2"
        app:queryHint="Поиск в категориях" />

    <ProgressBar
        android:id="@+id/progressNewCreatePro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_category_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="14dp"
        android:paddingRight="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="300dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="300dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="200dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>