<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="4dp">

        <ImageView
            android:id="@+id/text_header"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/fon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_toEndOf="@id/text_header"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toStartOf="@+id/cancel"
            app:layout_constraintStart_toEndOf="@+id/text_header"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/review"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtUpdateError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="12sp"
                    android:textColor="@color/fon" />

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/todo"
            android:padding="2dp"
            android:src="@drawable/ic_clear_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View style="@style/Divider.Horizontal" />

    <ProgressBar
        android:id="@+id/progressNewCreatePro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linShowReview"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edtNewMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_background"
                android:hint="@string/message"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:paddingHorizontal="5dp"
                android:paddingVertical="12dp"
                android:scrollbars="vertical"
                android:textColor="@color/black"
                android:textColorHint="@color/black_txt3" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btnPostMessage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:elevation="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_background">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_send"
                        app:tint="@color/fon1" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_shops"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linShowReview"
            tools:layout_editor_absoluteX="5dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="14dp"
        android:paddingRight="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="300dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="300dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="200dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>